updated scrapbook, added more pics to cat collections, added more links to notebook

--- a/doqmeat/about/index.html
+++ b/doqmeat/about/index.html
@@ -49,11 +49,11 @@
 				<p>（*＾-＾*）this is also me -&gt; <img src="/collection/internet-graphics/!g/silly-blinkie.gif" style="max-width:100%;" alt="silly blinkie :3"></p>
 
 				<p><a title="art by bitmapdreams" href="http://lastsecret.net/bitmapdreams/" target="_blank"><img src="/!g/deco/springflowers.gif" width="20%" align="right"></a>i enjoy listening to music, walking, messing around with code, petting my cat, and kissing my girlfriend.</p>
-				<p>this site started as something to mess around with when bored around april 2023 but as time passed i fell more and more in love with the idea of having a space where i can customize every corner of it and call it my home. i am mostly here to share my thoughts, archive things important to me, and have fun!</p>
+				<p>this site started as something to mess around with when bored around april 2023 but as time passed i fell more and more in love with the idea of having a space where i can customize every corner of it and call it my home. i am mostly here to share my thoughts, archive things important to me, and have fun! this site is mainly just for me and i love mantaining it when i have some free time.</p>
 
 				<p><img src="/!g/deco/mail.gif" align="left" style="margin-right:15px;">i won't reach out fast but do feel free to e-mail me at <a href="mailto:&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;" target="_blank">&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;</a> about whatever, really! whether it be to tell me about what you thought about my site, to send me pictures of your cats, recommend me an album you think i might like, or even ask any coding / website related questions you might have. i might take a while to answer back but anything goes, thank you very much for reading!</p>
 
-				<p style="text-align: right"><b>last updated on: 10.jan.26</b></p>
+				<p style="text-align: right"><b>last updated on: 25.jan.26</b></p>
 			</div>
 		</div>
 	</div>
@@ -196,7 +196,7 @@
 
 				<h3>video games</h3>
 				<li>portal 2</li>
-				<li>style savvy</li>
+				<li>style savvy trendsetters</li>
 				<li>stray</li>
 				<li>hyper light drifter</li>
 				<li>if found...</li>
@@ -256,7 +256,7 @@
 		<div class="header"><img src="!g/folder.png" class="folder"> fav_characters/<img onclick="closeBox('charas')" src="!g/close.jpg" alt="close button" class="closebtn himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
 		<div class="borderwrap">
 			<div class="wrapper-in">
-				<img title="dogmeat from the fallout franchise" src="!g/fav-charas/dogmeat.png" alt="dogmeat">
+				<img title="dogmeat from the fallout franchise" src="!g/fav-charas/dogmeat.png" alt="dogmeat from fallout">
 				<img title="power and meowy :3 from chainsaw man" src="!g/fav-charas/power.jpg" alt="power from chainsaw man">
 				<img title="angel devil from chainsaw man" src="!g/fav-charas/angel.jpg" alt="angel devil from chainsaw man">
 				<img title="altie from hyper light drifter" src="!g/fav-charas/altie.jpg">
@@ -357,15 +357,14 @@
 
 	<!-- 	links -->
 	<div id="contact" class="draggable">
-		<div class="header">links.txt<img onclick="closeBox('contact')" src="!g/close.jpg" alt="close button" class="closebtn himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
+		<div class="header">contact.txt<img onclick="closeBox('contact')" src="!g/close.jpg" alt="close button" class="closebtn himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
 		<div class="borderwrap">
 			<div class="wrapper-in padding list">
 				you can find me in other places like...
 				<a title="e-mail me!" href="mailto:&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;"><img src="/!g/pix/mail11a.gif" align="left" style="margin-right:15px;margin-top:5px;margin-left:10px;"></a>
-				<li><a title="all of my projects have repositories here!" href="https://github.com/doqmeat" target="_blank">github</a></li>
-				<li><a title="twitter 2.0" href="https://bsky.app/profile/doqmeat.com" target="_blank">bsky</a></li>
-				<li><a title="here til the site gets inevitably nuked" href="https://twitter.com/sepiarecord999" target="_blank">twitter</a></li>
+				<li><a title="pretty active here :p come say hai!" href="https://bsky.app/profile/doqmeat.com" target="_blank">bsky</a></li>
 				<li><a href="https://doqmeats.tumblr.com/" target="_blank">tumblr</a></li>
+				<li><a href="https://vgen.co/doqmeat" target="_blank">vgen</a></li>
 				<li><a title="you can support me here!" href="https://ko-fi.com/doqmeat" target="_blank">ko-fi</a></li>
 			</div>
 		</div>
