--- a/doqmeat/collection/cats/index.html
+++ b/doqmeat/collection/cats/index.html
@@ -23,6 +23,9 @@
 
 		<!--column 1-->
 		<div class="column">
+			<img src="!g/cpu-cat-processing-unit.jpg" alt="a cat inside a desktop computer">
+			<img src="!g/erm-actually.jpg" alt="smart cat saying erm actually">
+			<img src="!g/online-translator.jpg" alt="online translator of a cat saying meow meow and it translates to kill your self!!!">
 			<img src="!g/moth-tiger.jpg" alt="a tiger that is also a moth i think">
 			<video controls>
 				<source src="!g/the-blinker.mp4" type="video/mp4">
@@ -142,7 +145,7 @@
 	<footer>
 		<img src="div1.gif" alt=""><img src="div.gif" alt=""><img src="div2.gif" alt="">
 		<br>
-		<b>last updated: 16.nov.25</b>
+		<b>last updated: 25.jan.26</b>
 		<br><br>
 		<b>credit:</b> page made with materials by <a href="http://tora7.ciao.jp" target="_blank">tora7.ciao.jp</a> / <a href="/notebook/resources/fonts.html">fonts</a> used: cat paw, momo
 
