--- a/doqmeat/notebook/resources/bookmarks.html
+++ b/doqmeat/notebook/resources/bookmarks.html
@@ -36,13 +36,18 @@
 			<li><a href="https://ihavenotv.com/" target="_blank">ihavenotv</a> - a website that links you documentaries to watch.</li>
 			<li><a href="https://remoji.com/" target="_blank">remoji</a> - make lines with emojis with your cursor</li>
 			<li><a href="https://www.lexie.land/dist/SI26.html" target="_blank">multi-layered recursion</a> - make recursive fractal trees with CSS</li>
-			<li><a href="https://writtenkitten.co/" target="_blank">written kitten</a> - shows you a kitten the more you write!</li>
 		</ul>
 
 		<h3 id="comm">communities</h3>
 		<ul>
 			<li><a href="https://discourse.32bit.cafe/" target="_blank">discourse.32bit.cafe</a> - a nice forum of website hobbyists and professionals</li>
 			<li><a href="https://sundaysites.cafe/" target="_blank">sundaysites.cafe</a> - hosts sessions where you create an HTML page with a given topic and can interact with others afterwards!</li>
+		</ul>
+
+		<h3>web</h3>
+		<ul>
+			<li><a href="https://unplatform.fromthesuperhighway.com/" target="_blank">unplatform</a> - a guide on how start escaping social media</li>
+			<li><a href="https://poeticweb.com/bookmarklets/index.html" target="_blank">bookmarklets</a> - scripts you can execute on any site with the click of your bookmark</li>
 		</ul>
 
 		<h3 id="wikis">wikis</h3>
@@ -60,6 +65,7 @@
 
 		<h3 id="music-links">music</h3>
 		<ul>
+			<li><a href="https://thesoundof.love/" target="_blank">the sound of love</a> - plays you a romantic song with a youtube comment written about it</li>
 			<li><a href="https://music.ishkur.com/">ishkur's guide to electronic music</a> - an interactive site with various examples of electronic subgenres</li>
 			<li><a href="https://poolsuite.net/" target="_blank">poolsuite</a></li>
 			<li><a href="https://ambient.garden/" target="_blank">ambient.garden</a></li>
@@ -75,7 +81,6 @@
 		<ul>
 			<li><a href="https://wiki.lineageos.org/" target="_blank">lineageOS</a> - OS for various devices that you can "hack", i have it pending for my very old <a href="https://wiki.lineageos.org/devices/gtowifi/" target="_blank">samsung tablet</a></li>
 			<li><a href="https://overthewire.org/wargames/bandit/bandit1.html" target="_blank">overthewire</a> - puzzle you have to solve through your terminal</li>
-			<li><a href="https://meodai.github.io/pro-color-harmonies/" target="_blank">pro color harmonies</a></li>
 			<li><a href="https://typst.app/" target="_blank">typst</a></li>
 			<li><a href="https://svelte.dev/" target="_blank">svelte</a></li>
 			<li><a href="https://emberjs.com/" target="_blank">ember.js</a></li>
@@ -83,16 +88,31 @@
 
 		<h3 id="games">games</h3>
 		<ul>
-			<li><a href="https://twinery.org/2/#/" target="_blank">twinery</a></li>
+			<li><a href="https://gradient.horse/" target="_blank">gradient.horse</a></li>
 			<li><a href="https://www.balatrodle.com/" target="_blank">balatrodle</a></li>
 			<li><a href="https://vibes.fish/" target="_blank">vibes.fish</a></li>
+			<li><a href="https://dukope.itch.io/lcd-please" target="_blank">LCD, Please</a> - papers, please demake made by the same dev!</li>
+		</ul>
+		<h4>tools</h4>
+		<ul>
+			<li><a href="https://3ds.hacks.guide" target="_blank">3ds.hacks.guide</a> / <a href="https://wiki.hacks.guide/wiki/3DS:Things_to_do" target="_blank">things to do</a> / <a href="https://wiki.ds-homebrew.com/ds-index/forwarders?tab=3ds-sd-card" target="_blank">DS game forwarder</a></li>
+			<li><a href="https://wiiu.hacks.guide/#/" target="_blank">wiiu.hacks.guide</a> / <a href="https://wiki.agilly1989.xyz/books/wiiu" target="_blank">another guide</a> / <a href="https://wii.hacks.guide/vwii-homebrew-channel" target="_blank">vwii modding</a></li>
+			<li><a href="https://twinery.org/" target="_blank">twine</a> - tool for non-linear storytelling</li>
 			<li><a href="https://make.bitsy.org/" target="_blank">bitsy</a> - game editor for HTML</li>
 			<li><a href="https://tic80.com/" target="_blank">tic80</a> - tiny computer for making games</li>
 			<li><a href="https://www.reddit.com/r/Roms/" target="_blank">roms subreddit</a></li>
 			<li><a href="https://melonds.kuribo64.net/" target="_blank">melon DS</a> - DS emulator</li>
-			<li><a href="https://dukope.itch.io/lcd-please" target="_blank">LCD, Please</a> - papers, please demake made by the same dev!</li>
-			<li><a href="https://3ds.hacks.guide" target="_blank">3ds.hacks.guide</a> / <a href="https://wiki.hacks.guide/wiki/3DS:Things_to_do" target="_blank">things to do</a> / <a href="https://wiki.ds-homebrew.com/ds-index/forwarders?tab=3ds-sd-card" target="_blank">DS game forwarder</a></li>
-			<li><a href="https://wiiu.hacks.guide/#/" target="_blank">wiiu.hacks.guide</a> / <a href="https://wiki.agilly1989.xyz/books/wiiu" target="_blank">another guide</a> / <a href="https://wii.hacks.guide/vwii-homebrew-channel" target="_blank">vwii modding</a></li>
+		</ul>
+
+		<h3>colors</h3>
+		<ul>
+			<li><a href="https://meodai.github.io/pro-color-harmonies/" target="_blank">pro color harmonies</a></li>
+			<li><a href="https://lospec.com/palette-list" target="_blank">lospec's palette-list</a> - color palettes for pixel art</li>
+		</ul>
+
+		<h3>cat related</h3>
+		<ul>
+			<li><a href="https://writtenkitten.co/" target="_blank">written kitten</a> - shows you a kitten the more you write!</li>
 		</ul>
 
 		<h3>language</h3>
