--- a/doqmeat/tv/index.html
+++ b/doqmeat/tv/index.html
@@ -132,7 +132,7 @@
 
 		<aside id="blu-ray">
 			<img title="from the rebellion bluray box art, there's so many neat designs there!" class="pagedoll" src="assets/rebellion-pagedoll.png">
-			<h2>blu-rays</h2>
+			<h2>blu-rays &amp; DVDs</h2>
 			<p>as always, i try to get my favorite stuff physically. here's some blu-rays i own :p</p>
 			<div class="wrapper">
 				<img title="puella magi madoka magica the movie" src="blu-rays/pmmm-the-movie.jpg" alt="pmm the movie">
@@ -158,7 +158,9 @@
 				<p>i really like doing lists. ❤︎ = favorite!</p>
 				<h3>finished</h3>
 				<ul>
-					<li>severance ❤︎</li>
+					<li>sweetpea</li>
+					<li>pluribus</li>
+					<li>severance</li>
 					<li>twin peaks: the return</li>
 					<li>twin peaks</li>
 					<li>orange is the new black</li>
@@ -174,6 +176,7 @@
 					<li>fionna and cake</li>
 					<li>breaking bad</li>
 					<li>adventure time</li>
+					<li>adventure time: distant lands</li>
 					<li>keep your hands off eizouken ❤︎</li>
 					<li>hunter x hunter</li>
 					<li>the owl house</li>
