--- a/doqmeat/notebook/resources/index.html
+++ b/doqmeat/notebook/resources/index.html
@@ -255,6 +255,7 @@
       <li><a href="https://surfing-waves.com/feed.htm" target="_blank">RSS feed widget</a></li>
       <li><a href="https://rss.bloople.net/" target="_blank">RSS 2 HTML</a> - another great rss widget</li>
       <li><a href="https://feedcanary.com" target="_blank">feed canary</a> - e-mails you if your RSS ever goes bad!</li>
+      <li>you can get the rss feed of a github repo's commits by adding .atom at the end of the url btw!</li>
     </ul>
 
     <h4 id="help-misc">misc</h4>
@@ -324,7 +325,8 @@
 
     <h3 id="bgs">backgrounds</h3>
     <ul>
-      <li><a href="http://www.tartanmaker.com" target="_blank">tartan maker</a> - plaid pattern generator, v useful if u want a tiled bg</li>
+      <li><a href="https://geokash.com/gingham-generator/" target="_blank">gingham generator</a></li>
+      <li><a href="http://www.tartanmaker.com" target="_blank">tartan maker</a> - plaid pattern generator</li>
       <li><a href="http://backgroundsarchive.com" target="_blank">backgroundsarchive</a> - old low quality bgs!</li>
       <li><a href="https://www.pexels.com" target="_blank">pexels</a> - free bgs / textures </li>
       <li><a href="https://unsplash.com/" target="_blank">unsplash</a> - free bgs / textures</li>
