added a new mail stamp

--- a/doqmeat/collection/mail-stamps/index.html
+++ b/doqmeat/collection/mail-stamps/index.html
@@ -38,6 +38,7 @@ coded with love by des
 				<img src="!g/dragon.jpg" alt="cartoony dragon over a castle breathing fire. from 2019">
 			</div>
 			<div class="column">
+				<img src="!g/260126-global-2026.png" alt="a compass">
 				<img src="!g/love.jpg" alt="love written in cursive with floral decoration">
 				<img src="!g/swimming.jpg" alt="two people using a boat with paddles">
 				<img src="!g/us-flag.jpg" alt="3 usa flags">
@@ -55,7 +56,7 @@ coded with love by des
 		</div>
 
 		<footer>
-			<b>last updated on: 29.may.25</b>
+			<b>last updated on: 26.jan.26</b>
 			<br>
 			<b>credit:</b> bg img by <a href="https://www.pexels.com/photo/brown-wooden-gate-and-green-leafed-tree-63743/" target="_blank">donald tong on pexels</a> / <a href="/notebook/resources/fonts.html">fonts</a> used: simple, garden script.
 			<br>
