added a new pic to my disks collection + minor changes around the page

--- a/doqmeat/tv/index.html
+++ b/doqmeat/tv/index.html
@@ -17,10 +17,13 @@
 <body>
 	<header>
 		<h1>tv log</h1>
-		<p>place for me to ramble on about stuff i've watched, and other things along side that.</p>
-		<nav><a href="#blu-ray">blu-rays</a> - <a href="#letterboxd-rss">recently watched</a> - <a href="#lists">shows & anime</a></nav>
+		<p>a place for me to ramble about shows that changed my life, display my physical DVD's collection, and do my favorite thing ever: make lists of things.</p>
+		<nav><b>navigation:</b> <a href="#mini-reviews">mini reviews</a> - <a href="#disks">blu-rays &amp; DVDs</a> - <a href="#letterboxd-rss">recently watched</a> - <a href="#lists">shows & anime</a></nav>
 	</header>
 	<main>
+
+		<h2 id="mini-reviews">mini reviews and recommendations</h2>
+
 		<div id="wrapper">
 
 			<!--	TEMPLATE 
@@ -35,7 +38,6 @@
 				</div>
 			</div>
 			-->
-
 			<div class="show">
 				<div class="box">
 					<img src="!g/madoka.png" onmouseover="this.src='!g/madoka-rebellion/cover.png';" onmouseout="this.src='!g/madoka.png';" class="cover" alt="madoka magica anime cover">
@@ -64,22 +66,6 @@
 				</div>
 			</div>
 
-			<div class="show">
-				<div class="box">
-					<img src="!g/twin-peaks.png" class="cover">
-					<h2 id="twin peaks">twin peaks</h2>
-					<p>during april 2023 my girlfriend asked me if i wanted to either watch <i>twin peaks</i> or <i>the haunting of bly manor</i>.</p>
-					<p>i'm gonna get a tiny bit cheesy for a sec but then my girlfriend proceeded to explain to me the general plot of <i>twin peaks</i> and his face kinda lit up because it's one of his favorite TV shows so i went with <i>twin peaks</i></p>
-					<p>i find this show kind of insane tbh. there are some things that haven't aged all that well, but at least i get my giggle or two.</p>
-					<p>the main mystery of the show of <b>who killed laura palmer</b> was very interesting and i honestly did not see coming the finale of it. there's a lot more to this show than just the murder mystery with its supernatural? themes and that made it very fun to watch.</p>
-					<p>my favorite character is probably cooper... yes.... he's just so much fun and funny and silly... he's also my bf's favorite character as well. but another contender is probably josephine for being the most <b>BEAUTIFUL</b> woman i've ever seen in my entire life. jesus.</p>
-
-					<p>we're currently like halfway through the 2nd season where (for some reason?) we have already established the killer of laura so now it just feels like we're following the main cast shenanigans with some filler stuff on the side and it just feels a little bit messy... but i'm still enjoying it nonetheless.</p>
-					<hr>
-					<p>that ending??? alright then... i hope to watch season 3 at some point but i'm not sure where to watch it that wouldn't cost me money LMAO</p>
-					<p><a href="https://www.filmaffinity.com/us/movieimage.php?imageId=892912807" target="_blank">poster credit</a></p>
-				</div>
-			</div>
 
 			<div class="show">
 				<div class="box">
@@ -96,35 +82,35 @@
 					<p>watching this was what made me interesting in watching <a href="/masaaki-yuasa/index.html">masaaki yuasa</a>'s other work! it has also been my favorite out of all of them.</p>
 				</div>
 			</div>
-
 			<div class="show">
 				<div class="box">
-					<img src="!g/dungeon-meshi.png" class="cover" alt="dungeon meshi poster">
-					<h2 id="meshi">dungeon meshi</h2>
-					<p>so cute and fun.</p>
-					<p>had to watch the last few eps in the eng dub bc my mom wanted to understand what they were saying as she was knitting LOL</p>
+					<img src="!g/twin-peaks.png" class="cover">
+					<h2 id="twin peaks">twin peaks</h2>
+					<p>during april 2023 my girlfriend asked me if i wanted to either watch <i>twin peaks</i> or <i>the haunting of bly manor</i>.</p>
+					<p>i'm gonna get a tiny bit cheesy for a sec but then my girlfriend proceeded to explain to me the general plot of <i>twin peaks</i> and her face kinda lit up because it's one of his favorite TV shows so i went with <i>twin peaks</i></p>
+					<p>i find this show kind of insane tbh. there are some things that haven't aged all that well, but at least i get my giggle or two.</p>
+					<p>the main mystery of the show of <b>who killed laura palmer</b> was very interesting and i honestly did not see coming the finale of it. there's a lot more to this show than just the murder mystery with its supernatural? themes and that made it very fun to watch.</p>
+					<p>my favorite character is probably cooper... yes.... he's just so much fun and funny and silly... he's also my bf's favorite character as well. but another contender is probably josephine for being the most <b>BEAUTIFUL</b> woman i've ever seen in my entire life. jesus.</p>
+
+					<p>we're currently like halfway through the 2nd season where (for some reason?) we have already established the killer of laura so now it just feels like we're following the main cast shenanigans with some filler stuff on the side and it just feels a little bit messy... but i'm still enjoying it nonetheless.</p>
+					<hr>
+					<p><b>edit 1:</b> that ending??? alright then... i hope to watch season 3 at some point but i'm not sure where to watch it that wouldn't cost me money LMAO</p>
+					<hr>
+					<p><b>edit 2:</b> the ending of twin peaks the return kinda broke me but at least i have dougie jones...</p>
+					<p><a href="https://www.filmaffinity.com/us/movieimage.php?imageId=892912807" target="_blank">poster credit</a></p>
 				</div>
 			</div>
-
-			<div class="show">
-				<div class="box">
-					<img src="!g/utena.png" alt="revolutionary girl utena poster" class="cover">
-					<h2 id="utena">revolutionary girl utena</h2>
-					<p>i binged watched this when i got covid but then i got better and forgot about it... SOON i will finish you. found the story very intriguing.</p>
-					<p>edit: wow. i get it now.</p>
-				</div>
-			</div>
-
 			<div class="show">
 				<div class="box">
 					<img src="!g/morel%20orel.png" class="cover" alt="moral orel poster">
 					<h2 id="moral-orel">moral orel</h2>
 					<p>this show was such an emotional ride :')</p>
-					<p>despite the show being mostly like a comedy of the lives of these people, i really do like some of the theme this show tackles and how it explores them. i was often feeling really heavy for these characters, specially orel. i grew up in a Very christian enviroment so some of the things discussed in this <b>really</b> got to me in a way. i get it.</p>
+					<p>despite the show being mostly like a comedy of the lives of these people, i really do like some of the theme this show tackles and how it explores them. i was often feeling really heavy for these characters, specially orel. i grew up in a Very christian enviroment so some of the things discussed in this <b>really</b> got to me in a way. and i get it.</p>
 					<p>which was the reason why my heart was so heavy when i finished watching it. orel i love you so much.</p>
 					<p>need to watch the special that released a few years ago.</p>
 				</div>
 			</div>
+
 
 
 			<!--wrapper end div-->
@@ -133,17 +119,18 @@
 		<aside id="blu-ray">
 			<img title="from the rebellion bluray box art, there's so many neat designs there!" class="pagedoll" src="assets/rebellion-pagedoll.png">
 			<h2>blu-rays &amp; DVDs</h2>
-			<p>as always, i try to get my favorite stuff physically. here's some blu-rays i own :p</p>
+			<p>as always, i try to get my favorite stuff physically. here's some awesome disks i own :p</p>
 			<div class="wrapper">
-				<img title="puella magi madoka magica the movie" src="blu-rays/pmmm-the-movie.jpg" alt="pmm the movie">
-				<img title="PMMM rebellion" src="blu-rays/rebellion.jpg" alt="rebellion">
-				<img title="PMMM anime (episodes 1 - 8)" src="blu-rays/pmmm-anime-1-8.jpg" alt="">
-				<img title="wall-e" src="blu-rays/wall-e.jpg">
-				<img title="kaiba" src="blu-rays/kaiba.jpg">
-				<img title="the little prince" src="blu-rays/the-little-prince.jpg">
-				<img title="train to busan" src="blu-rays/train-to-busan.jpg">
-				<img title="everything everywhere all at once" src="blu-rays/eeaao.jpg">
-				<img title="surf's up" src="blu-rays/surfs-up.jpg">
+				<img title="adventure time full DVD set" src="disks/adventure-time.jpg" alt="adventure time full DVD set">
+				<img title="puella magi madoka magica the movie" src="disks/pmmm-the-movie.jpg" alt="pmm the movie">
+				<img title="PMMM rebellion" src="disks/rebellion.jpg" alt="puella magi madoka magica rebellion">
+				<img title="PMMM anime (episodes 1 - 8)" src="disks/pmmm-anime-1-8.jpg" alt="puella magi madoka magica blu-ray disk episodes 1 to 8">
+				<img title="wall-e" src="disks/wall-e.jpg" alt="wall-e blu ray">
+				<img title="kaiba" src="disks/kaiba.jpg">
+				<img title="the little prince" src="disks/the-little-prince.jpg">
+				<img title="train to busan" src="disks/train-to-busan.jpg">
+				<img title="everything everywhere all at once" src="disks/eeaao.jpg">
+				<img title="surf's up" src="disks/surfs-up.jpg">
 			</div>
 		</aside>
 
@@ -154,11 +141,11 @@
 			</div>
 
 			<div id="lists">
-				<h2>shows / anime list</h2>
+				<h2>list of shows &amp; anime</h2>
 				<p>i really like doing lists. ❤︎ = favorite!</p>
 				<h3>finished</h3>
 				<ul>
-					<li>sweetpea</li>
+					<li>sweetpea - 23.jan.26</li>
 					<li>pluribus</li>
 					<li>severance</li>
 					<li>twin peaks: the return</li>
@@ -208,9 +195,9 @@
 	</main>
 
 	<footer>
-		<p><b>last updated: 04.jul.25</b></p>
+		<p><b>last updated: 26.jan.26</b></p>
 		<p> <a href="#">top</a> - <a href="/">home</a> - <a href="/sitemap">sitemap</a></p>
-		<p><b>credit:</b> <a href="/notebook/resources/fonts.html">fonts</a> used: basiic, pink tape / body bg from madoka magica: rebellion</p>
+		<p><b>credit:</b> <a href="/notebook/resources/fonts.html">fonts</a> used: gaegu, morningtea / body bg from madoka magica: rebellion</p>
 	</footer>
 
 	<div id="home"><a title="go back home" href="/"><img src="/!g/deco/tv.gif"></a></div>
