--- a/doqmeat/about/index.html
+++ b/doqmeat/about/index.html
@@ -63,6 +63,20 @@
 		<div class="header"><img src="!g/folder.png" class="folder"> quiz_results/<img onclick="closeBox('quiz')" src="!g/close.jpg" alt="close button" class="closebtn himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
 		<div class="borderwrap">
 			<div class="wrapper-in padding">
+				<a href="https://wikipedia25.org/en/which-wikipedia-of-the-future-are-you/result/the-first-day" target="_blank">Wikipedia of the Future: The Consensus-Driven Collaborator</a>
+				<img src="!g/quiz/wikipeadia.png" width="100%" alt="wikipedia quiz link">
+				<blockquote>
+					Welcome to the Knowl-Age
+					<br>
+					You're super curious, friendly yet argumentative, but not in a bad way.
+					<br>
+					Your future is shaped by open source technologies, open discourse, and a lot of behind-the-scenes teamwork.
+					<br>
+					AI might be part of your future, as long as it helps make life better for all of humanity—not just select individuals.
+					<br>
+					All this we see in your future: A fairer world where the internet belongs to everyone and maybe—just maybe—a Wikipedia Virtual Reality edition. Don't mind us, we will be doing the cha-cha from Wikipedia's “<a href="https://en.wikipedia.org/wiki/List_of_dance_styles" target="_blank">list of dance styles</a>”. Oh, and by the way, since you got this as a result, consider yourself officially invited to Wikipedia's 50th birthday!
+				</blockquote>
+				<hr>
 				<a href="http://cupped-expressions.net/cheese/quiz/" target="_blank"><img src="!g/quiz/chesse.gif" alt="I am emmental cheese!"></a><br><b><a href="http://cupped-expressions.net/cheese/quiz/" target="_blank">Cheese Test: What type of cheese are you?</a></b>
 				<hr>
 				<a href="https://www.theotaku.com/quizzes/view/3913/which_hatsune_miku_nendoroid_model_are_you%3F"><img border="0" src="http://www.theotaku.com/guru_results/3913_Sakura_Miku.jpg" width="100%" alt="Which Hatsune Miku Nendoroid Model Are You?" /><br /></a><a href="https://www.theotaku.com/quizzes/view/3913/which_hatsune_miku_nendoroid_model_are_you%3F">Which Hatsune Miku Nendoroid Model Are You?</a><br />Hosted By theOtaku.com: <a href="http://www.theotaku.com" title="Anime">Anime</a>
