--- a/doqmeat/collection/index.html
+++ b/doqmeat/collection/index.html
@@ -28,13 +28,13 @@ https://coolors.co/fbeaf0-f48286-f04a4f-fedfcf
 		<div class="container">
 			<p class="desc">a <span title="they aren't exactly 'collections' but idk what else to call them...">collection</span> of things i like <img src="/!g/pix/hi-cat.gif" alt=""></p>
 			<ul>
+				<li><a href="picrews/index.html">picrews</a> <img src="/!g/pix/new1.gif" alt="new page"></li>
+				<li><a href="/tv#disks">blu-rays & DVDs</a> <img src="/!g/pix/updated1.gif" alt="updated page"></li>
 				<li><a title="WARNING! page contains flashing gifs, while not a ton or fast-paced, i still figured a warning is nice" href="internet-graphics/index.html">internet graphics</a></li>
 				<li><a href="cats/index.html">cat pics</a></li>
 				<li><a href="mail-stamps/index.html">mail stamps</a></li>
 				<li><a href="plushies/index.html">plushies</a></li>
 				<li><a href="/music/cds/index.html">CDs</a></li>
-				<li><a href="/tv#blu-ray">blu-rays & DVDs</a></li>
-				<li><a href="picrews/index.html">picrews</a> <img src="/!g/pix/new1.gif" alt="new page"></li>
 			</ul>
 			<!-- 		container end div -->
 		</div>
