--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -72,31 +72,31 @@ you're free to take whatever you need from my site, but please refrain from taki
 		<nav class="box">
 			<h3>personal</h3>
 			<a class="p" href="/about">about</a>
-			<a class="p" href="/photobook">photobook</a>
-			<a class="p" href="/journal">journal <img src="!g/pix/updated1.gif" alt="page updated"></a>
+			<a class="p" href="/photobook">photobook <img src="/!g/pix/updated1.gif" alt="updated page"></a>
+			<a class="p" href="/journal">journal</a>
 			<a class="p" href="/microblog">microblog</a>
-			<a class="p" href="/blog">blog</a>
+			<a class="p" href="/blog">blog <img src="/!g/pix/new1.gif" alt="new blog post"></a>
 			<a class="p" href="/fashion">fashion</a>
 			<a class="p" href="/scrapbook">scrapbook</a>
 			<a class="p" href="/shrines">shrines</a>
-			<a class="p" href="/collection">collections</a>
-			<a class="p" href="/art">art &amp; crafts</a>
+			<a class="p" href="/collection">collections <img src="/!g/pix/updated1.gif" alt="updated page"></a>
+			<a class="p" href="/art">art &amp; crafts <img src="/!g/pix/updated1.gif" alt="updated page"></a>
 
 			<h3>media</h3>
 			<a class="m" href="/music">music</a>
 			<a class="m" href="/vgs">video games</a>
-			<a class="m" href="/tv">tv</a>
+			<a class="m" href="/tv">tv <img src="/!g/pix/updated1.gif" alt="updated page"></a>
 			<a class="m" href="/reading">reading</a>
 
 			<h3>misc</h3>
-			<a class="o" href="/learning">learning <img src="!g/pix/updated1.gif" alt="page updated"></a>
+			<a class="o" href="/learning">learning</a>
 			<a class="o" href="/faq">FAQ</a>
-			<a class="o" href="/fish-love">fish love <img src="!g/pix/new1.gif" alt="new page"></a>
+			<a class="o" href="/fish-love">fish love</a>
 
 			<h3>sitely</h3>
 			<a href="/info" class="s">info</a>
 			<a class="s" href="/sites">button wall</a>
-			<a class="s" href="/notebook">resources <img src="!g/pix/updated1.gif" alt="page updated"></a>
+			<a class="s" href="/notebook">resources</a>
 			<a class="s outlink" href="https://doqmeat.atabook.org/">guestbook</a>
 			<a class="s outlink" href="https://neocities.org/site/doqmeat" target="_blank">neocities profile</a>
 			<a class="s outlink" title="github repository" href="https://github.com/doqmeat/doqmeat.com" target="_blank">source code</a>
@@ -166,9 +166,9 @@ you're free to take whatever you need from my site, but please refrain from taki
 					</p>
 					<p><span class="title">playing: </span> silksong, style savvy</p>
 					<p><span class="title">watching: </span> jojo (part 4), fallout (season 2)</p>
-					<p><span class="title">reading: </span> n/a</p>
-					<p><span class="title">working on: </span> music page rework maybe, new f2u template</p>
-					<p class="date">last updated: 15.jan.26</p>
+					<p><span class="title">reading: </span> Computer Systems A Programmer's Perspective</p>
+					<p><span class="title">working on: </span> thinking of a couple of pages that could use a rework, new f2u template</p>
+					<p class="date">last updated: 26.jan.26</p>
 				</section>
 				<p id="notepad-notice">please turn on JS for this site omg... i promise i only use it for fun stuff.</p>
 				<section class="notepad-boxes" id="webrings">
