new infinity nikki log

--- a/doqmeat/vgs/games/infinity-nikki/index.html
+++ b/doqmeat/vgs/games/infinity-nikki/index.html
@@ -66,6 +66,14 @@
     <nav class="info"><b>navigation: </b><a href="#logs">logs</a> / <a href="#screenshots">screenshots</a> / <a href="#outfits">fav outfits</a></nav>
 
     <h3 id="logs">logs</h3>
+    <p><span class="date">27.jan.26</span> I AM STILL ALIVE and i am still playing this game. i didn't play a lot during august 2025 - december 2025 because... uni. but i got to play a bit more during the winter break. i finished main story and started the itzaland story. i really love the new map but the controls are a bit... eh. i had to change the controls because there's an abily where you have to aim and now it's a bit of a hassle to change between abilities. the arrow ability is really neat but then the dews of inspiration in wishfield are just so easy now with the arrow... but you know what i appreciate the help.</p>
+    <p>the latest event story, <b>life as a poem</b>, kinda killed me. i did not expect to play an infinity nikki quest and be talking about death and how it gives meaning to life. i still play but not a lot because of uni and life but i'm still playing. i really like this gacha. i call it the purple gacha.</p>
+    <img src="260127-purple1.png" width="100%" alt="nikki with a purple frilly outfit">
+    <img src="260127-purple2.png" width="100%" alt="nikki with a purple frilly outfit">
+    <p>recently a friend invited me into their game so i could check out the new giantification ability, but it turns out that i actually flexed on her cus i already had the ability. anyway, pic time. i love this mushroom outfit of mine, i've been wondering itzaland with this fit the entire time.</p>
+    <img src="260127-hina.png" width="100%" alt="me and hina's nikkis">
+    <img src="260127-palm.png" width="100%" alt="hina carrying me on the palm of her hand">
+    <hr>
     <p><span class="date">28.jul.25</span> nikki season coming to an end! i was so happy when i got this outfit OMGGGGGG</p>
     <img src="250728-white-moth.jpg" alt="nightlight whispers" width="100%">
     <p>i love the moth look of it so much....</p>
@@ -130,6 +138,10 @@
     <img src="panda (4).jpg" width="100%" alt="infinity nikki screenshots">
 
     <h3 id="screenshots">screenshots</h3>
+    <figure>
+      <img src="260127-dark.png" alt="a darker outfit">
+      <figcaption>this is kinda my cunty outfit</figcaption>
+    </figure>
     <figure>
       <img src="250728-moth-nikki.jpg" alt="purple moth">
       <figcaption>i had a lot of fun dying this outfit... my little purple moth</figcaption>
