--- a/doqmeat/notebook/resources/index.html
+++ b/doqmeat/notebook/resources/index.html
@@ -125,6 +125,7 @@
     <ul>
       <li><a href="https://www.cssportal.com" target="_blank">CSS portal</a> - the most extensive CSS reference site with a bunch of generators and tools!</li>
       <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Guides/Backgrounds_and_borders/Border-image_generator" target="_blank" rel="noopener noreferrer">dev mozilla's border-image generator</a></li>
+      <li><a href="https://maxbittker.github.io/broider/" target="_blank">broider</a> - make pixelated CSS borders</li>
       <li><a href="https://specificity.keegan.st/" target="_blank">specificity calculator</a></li>
       <li><a href="https://www.w3schools.com/cssref/index.php" target="_blank">w3schools CSS reference</a></li>
       <li><a href="https://css-pattern.com/graph-paper/" target="_blank">CSS patterns</a></li>
@@ -149,6 +150,7 @@
     <h3 id="html">HTML</h3>
     <ul>
       <li><a href="https://breezyscoolsite.neocities.org/" target="_blank">breezyscoolsite</a> - in-depth guide about making websites</li>
+      <li><a href="https://playhtml.fun/" target="_blank">playhtml</a> - html attributes that make your elements more interactive!</li>
       <li><a href="https://learntheweb.courses/topics/html-semantics-cheat-sheet/" target="_blank">HTML semantics</a></li>
       <li><a href="https://www.html.am/html-editors/html-text-editor.cfm" target="_blank">www.html.am</a> - html text editor</li>
       <li><a href="https://validator.w3.org/nu/" target="_blank">HTML validator</a></li>
@@ -214,6 +216,7 @@
 
     <h4 id="guestbooks">guestbooks / comments / forms</h4>
     <ul>
+      <li><a href="https://iqra.dewdrop.club/chat-tutorial" target="_blank">chatbox tutorial</a> - from iqra, make your own chatbox from scratch! does require a server for the database.</li>
       <li><a href="https://clap.fc2.com/en/" target="_blank">FC2 webclap</a> button for your site! also lets people comment on the clap page.</li>
       <li><a href="https://virtualobserver.moe/ayano/comment-widget" target="_blank">comment widget</a> by ayano</li>
       <li><a href="https://chattable.neocities.org/" target="_blank">chattable</a> - free and extremely customizable chatbox by <a href="https://xobyte.dev/" target="_blank">xobyte.dev</a></li>
@@ -276,6 +279,7 @@
 
     <ul>
       <li><a title="templaterr" href="https://templaterr.neocities.org/sidebar/" target="_blank">sidebar the same across all pages (w/ js)</a> by templaterr</li>
+      <li><a href="https://lupine.dev/collectibles-js/" target="_blank">collectibles.js</a> - have little collectibles around your site</li>
       <li><a href="https://kalechips.net/projects/snippets/styleswitcher" target="_blank">JS style switcher</a></li>
       <li><a href="https://codepen.io/sadness97/pen/mdOXzNW" target="_blank">falling items code</a> by sadness</li>
       <li><a href="https://stackoverflow.com/questions/40645032/creating-multiple-modals-on-a-single-page" target="_blank">multiple modals on a single page</a></li>
