--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -272,7 +272,8 @@
 			<a href="https://catmothcrow.neocities.org/" target="_blank">catmothcrow</a> /
 			<a href="https://jessiechannel.neocities.org/" target="_blank">jessiechannel</a> /
 			<a href="https://jackieis.online/" target="_blank">jackieis.online</a> /
-			<a href="https://kiaroou.neocities.org" target="_blank">kiaroo</a>
+			<a href="https://kiaroou.neocities.org" target="_blank">kiaroo</a> /
+			<a href="https://litter.leaflet.pub/" target="_blank">litter.leaflet.pub</a>
 		</p>
 
 		<h3><img src="/!g/pix/icon_k_clover1.gif"> others</h3>
