--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -167,7 +167,7 @@ you're free to take whatever you need from my site, but please refrain from taki
 					<p><span class="title">playing: </span> silksong, style savvy</p>
 					<p><span class="title">watching: </span> jojo (part 4), fallout (season 2)</p>
 					<p><span class="title">reading: </span> Computer Systems A Programmer's Perspective</p>
-					<p><span class="title">working on: </span> thinking of a couple of pages that could use a rework, new f2u template</p>
+					<p><span class="title">working on: </span> changing hosts!, thinking of a couple of pages that could use a rework, new f2u template</p>
 					<p class="date">last updated: 26.jan.26</p>
 				</section>
 				<p id="notepad-notice">please turn on JS for this site omg... i promise i only use it for fun stuff.</p>
