is this now fixed?

--- a/doqmeat/testing-ssi/index.html
+++ b/doqmeat/testing-ssi/index.html
@@ -1,4 +1,4 @@
-<!--# layout file="layouts/game.html" -->
+<!--# layout file="~/layouts/game.html" -->
 <!--# block name="title" -->ssi testing<!--# endblock -->
 <!--# block name="style" -->
 <style>
