follow btn on nekoweb

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -102,6 +102,7 @@ you're free to take whatever you need from my site, but please refrain from taki
 			<a class="s outlink" href="https://neocities.org/site/doqmeat" target="_blank">neocities profile</a>
 			<a class="s outlink" title="github repository" href="https://github.com/doqmeat/doqmeat.com" target="_blank">source code</a>
 			<a class="s" href="sitemap.html">sitemap</a>
+			<iframe src="https://nekoweb.org/frame/follow" frameborder="0" width="170" height="28"></iframe>
 		</nav>
 
 		<!-- pic log -->
